--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>M&LG</title>
+    <title>Math and Logic Games</title>
     <link rel="stylesheet" href="css/main.css">
     <script src="js/jquery-1.8.0.min.js"></script>
     <script src="js/game1.js"></script>
